getUserByList
